# logos-package-manager-module

./: CMakeLists.txt  README.md  flake.nix  metadata.json  package_manager_plugin.cpp  package_manager_plugin.h
.github/workflows/: appimage.yml  ci.yml
assets/: lgpm.desktop
cmd/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  flake.nix
nix/: cli.nix  default.nix  include.nix  lib.nix
scripts/: build-ios.sh
src/: package_manager_impl.cpp  package_manager_impl.h  package_manager_interface.h  package_manager_loader.h  package_manager_plugin.cpp  package_manager_plugin.h
src/lib/: package_manager_lib.cpp  package_manager_lib.h
test_modules_new/: chat_plugin.dylib
tests/: CMakeLists.txt  package_manager_events_test.cpp  test_directory_config.cpp  test_keyring.cpp  test_package_manager.cpp  test_package_manager_integration.cpp  test_scanning.cpp  test_signature.cpp
tests/mocks/: mock_lgx.cpp  mock_package_manager_lib.cpp  mock_package_manager_lib.h
tests/stubs/: lgx.h  package_manager_lib.h
